--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">        
-        <link rel="stylesheet" type="text/css" href="css/bootswatch.css">        
-        <link href="css/variables.less" rel="stylesheet/less">        
-        <link href="css/bootswatch.less" rel="stylesheet/less">                
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="css/bootswatch.css">
+        <link href="css/variables.less" rel="stylesheet/less">
+        <link href="css/bootswatch.less" rel="stylesheet/less">
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -29,47 +29,47 @@
                     <a href="../" class="brand">Sujan Thapa</a>
                     <div id="main-menu" class="nav-collapse in collapse" style="height: auto;">
                         <ul class="nav" id="main_menu-left">
-                            <li id="AboutMe"><a href="#AboutMe">About Me</a></li>                            
+                            <li id="AboutMe"><a href="#AboutMe">About Me</a></li>
                             <li class="dropdown">
                                 <a href="#Qualifications" class="dropdown-toggle" data-toggle="dropdown">Qualifications<b class="caret"></b></a>
-                                <ul class="dropdown-menu">                                    
-                                    <li id="Academic"><a href="#Academic">Academic</a></li>                                    
+                                <ul class="dropdown-menu">
+                                    <li id="Academic"><a href="#Academic">Academic</a></li>
                                     <!-- <li id="ExtraCurricular"><a href="#Non-Academic">Non-academic</a></li> -->
-                                    <li id="Technical"><a href="#Technical">Technical</a></li>                                                                        
-                                    <li id="ProfessionalExperience"><a href="#ProfessionalExperience">Professional Experience</a></li>                                                                        
+                                    <li id="Technical"><a href="#Technical">Technical</a></li>
+                                    <li id="ProfessionalExperience"><a href="#ProfessionalExperience">Professional Experience</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#projects" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
-                                <ul class="dropdown-menu">                                    
+                                <ul class="dropdown-menu">
                                     <li id="8puzzle"><a href="#8PuzzleGame">8-Puzzle Game</a></li>
                                     <li id="tictactoe"><a href="#TicTacToe">Tic-Tac-Toe</a></li>
                                     <li id="ibm"><a href="#IBM">IBM</a></li>
-                                    <li id="bcds"><a href="#BCDS">BCDS</a></li>                                  
+                                    <li id="bcds"><a href="#BCDS">BCDS</a></li>
                                    <!-- <li class="divider"></li>
                                     <li id="iPlay"><a href="#iPlay">iPlay</a></li>
                                     <li id="IMS"><a href="#IMS">IMS</a></li>
                                     <li id="CSR"><a href="#CSR">CSR</a></li> -->
-                                    <!--<li id="CareWave"><a href="#CareWave">CareWave Portal</a></li>-->                                                                      
+                                    <!--<li id="CareWave"><a href="#CareWave">CareWave Portal</a></li>-->
                                 </ul>
                             </li><li class="dropdown">
                                 <a href="#areaofinterest" class="dropdown-toggle" data-toggle="dropdown">Area of Interest<b class="caret"></b></a>
-                                <ul class="dropdown-menu">   
+                                <ul class="dropdown-menu">
 									<li id="android"><a href="#Android">Android</a></li>
 									<li id="music"><a href="#Music">Music</a></li>
-                                    <li id="pc-games"><a href="#HMS">PC Games</a></li>
-                                    <li id="social-psychology"><a href="#SocialPsychology">Social Psychology</a></li>                                                                                                         
+                                    <li id="photography"><a href="#HMS">Photography</a></li>
+                                    <li id="social-psychology"><a href="#SocialPsychology">Social Psychology</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </div>  
+        </div>
         <!--End NAV-->
         <!--Start of CONTENT-->
-        <div class="container">      
-            <div id="changedContent">                
+        <div class="container">
+            <div id="changedContent">
             </div>
             <br><br><br><br><hr>
             <footer id="footer">
@@ -80,7 +80,7 @@
 				<a href="http://stackoverflow.com/users/819014/najus" target="_blank"><img src="/img/s3.png"/></a>
 				<a href="http://instagram.com/najusujan" target="_blank"><img src="/img/ins.png"/></a><br>
                 Resume of
-                <a href="http://www.linkedin.com/pub/sujan-thapa/42/88a/ba4" target="_blank">Sujan Thapa</a>. 
+                <a href="http://www.linkedin.com/pub/sujan-thapa/42/88a/ba4" target="_blank">Sujan Thapa</a>.
 				Contact me
                 <a href="mailto:najussujan@gmail.com">najussujan[at]gmail</a>.
                 <br>
@@ -110,7 +110,7 @@
 </script>
             </footer>
             <!--End FOOTER-->
-        </div>   
+        </div>
         <!--End of CONTENT-->
     </body>
 </html>
