--- a/web/aboutme.html
+++ b/web/aboutme.html
@@ -1,13 +1,13 @@
 <header class="jumbotron subhead">
     <div class="row">
-        <div class="span11">            
+        <div class="span11">
             <br>
             <br>
             <div><h1 align="right">About Me</h1></div>
             <p align="right" class="lead" style='color:#DD4814'>ENGINEER.DEVELOPER.TAURUS</p>
             <br>
-            <h4 align="right" style='color:#DD4814'>I am a computer engineer by degree and developer by profession. I am also a minimalist :)</h4>
-            
+            <h4 align="right" style='color:#DD4814'>Computer engineer by degree and developer by profession. I am also a minimalist :)</h4>
+
             <p align="right" >This is just my landing page and trying to give you a picture of myself throught the texts.</p>
         </div>
     </div>
