--- a/web/professionalexperience.html
+++ b/web/professionalexperience.html
@@ -3,15 +3,15 @@
 </div>
 
 <h3 style="color:#DD4814">Software Engineer</h3>
-<p>Feb, 2013 - current</p>
+<p>Jan, 2013 - April, 2015</p>
 <h5 style="color:#999">Employer: <a href="http://www.bitscrafters.com/">BitsCrafters</a></h5>
-<p style="font-size:15px">Currently working as a full-time software engineer. Web-service development of the <a href="http://www.quertle.info">Quertle</a> was one of the projects which I worked on
-and was based on Java using JAX-WS (Java API for XML based web-services). I also developed an ETL tool for the addition of newer data source 
+<p style="font-size:15px">Worked as a full-time software engineer. Web-service development of the <a href="http://www.quertle.info">Quertle</a> was one of the projects which I worked on
+and was based on Java using JAX-WS (Java API for XML based web-services). I also developed an ETL tool for the addition of newer data source
 (<a href="http://dailymed.nlm.nih.gov/dailymed/about.cfm">DailyMeds</a>) for it.<p><br>
 
 
 <h3 style="color:#DD4814">Trainee</h3>
-<p>Nov, 2012 - Feb, 2013</p>
+<p>Apr, 2012 - Jan, 2013</p>
 <h5 style="color:#999">Employer: <a href="http://www.bitscrafters.com/">BitsCrafters</a></h5>
 <p style="font-size:15px">Most of the works were research and based on <a href="http://www.quertle.info">Quertle</a>. The trainee period was a more of a learning process of different
 terms and technologies used on the project. Study of the application architecture and flow was part of the process.<p>
