--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@ title: About Sujan Thapa
         <div class="postMeta-wrapper">
           <ul class="postMeta">
             <li class="postMeta-author">
-              a lifelong learner
+              Professional dragon slayer
             </li>
           </ul>
         </div>
